--- a/.gitignore
+++ b/.gitignore
@@ -47,8 +47,10 @@ cmake-build-*/
 out/
 
 # WebStorm
-/.idea
 /node_modules
+/.idea
+/.dist
+/build
 
 # mpeltonen/sbt-idea plugin
 .idea_modules/
@@ -70,5 +72,3 @@ fabric.properties
 
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
-
-/.dist
