--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "sass": "sass ./resources/sass/style.sass:./public/css/style.css"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "homepage": "https://hxl1116.github.io/Flothe/",
   "dependencies": {
+    "gh-pages": "^2.1.1",
     "material-components-web": "^4.0.0",
     "material-design-icons": "^3.0.1",
     "prop-types": "^15.7.2",
