Redesigned team cards

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -b gh-pages -d build",
     "sass": "sass ./resources/sass/style.sass:./public/css/style.css"
   },
   "keywords": [],
